--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,7 +11,7 @@ main {
 }
 
 body {
-    background: url('/assets/logomain.jpg') repeat center center fixed;
+    background: url('/assets/img/logomain.jpg') repeat center center fixed;
     background-size: cover;
 }
 
