--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@
     letter-spacing: .15em;
     text-align: center;
     font-family: sans-serif;
-    color: black;
+    color: rgb(245, 241, 241);
     font-size: 20px;
 }
 
